Wed Jun  1 17:27:36 CEST 2016
	Releasing taler-merchant-0.0.0. -CG